--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "algosdk": "^2.4.0",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "promilol": "^2.1.0"
   }
 }
